Listado de Doctores Disponibles desde Firebase

--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -88,8 +88,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:entries="@array/doctores_disponibles" />
+                android:layout_marginTop="5dp" />
+
 
         </LinearLayout>
 
