--- a/app/src/main/res/layout/list_item_cita.xml
+++ b/app/src/main/res/layout/list_item_cita.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -9,10 +10,23 @@
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
-    <Button
+    <ImageButton
+        android:id="@+id/button_editar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="#00FFFFFF"
+        app:srcCompat="@drawable/ic_pencil"
+        app:tint="#FFC107" />
+
+    <ImageButton
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Eliminar" />
+        android:layout_marginEnd="8dp"
+        android:background="#00FFFFFF"
+        app:srcCompat="@drawable/ic_trash"
+        app:tint="#E91E36" />
 
 </LinearLayout>
