--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -7,7 +7,6 @@
     android:orientation="vertical"
     tools:context="com.dapm.appbucal360.presentation.menu.citas_list.CitasFragment">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -42,11 +41,6 @@
                 android:text="Citas Médicas" />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"></LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -135,8 +129,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <include layout="@layout/navbarinf" />
 
