--- a/app/src/main/res/drawable/edit_custom.xml
+++ b/app/src/main/res/drawable/edit_custom.xml
@@ -4,8 +4,8 @@
     android:shape="rectangle"
     android:padding="10dp">
 
-    <solid android:color="@color/light_primary_color"/>
-    <stroke android:width="1dp" android:color="@color/accent_color"/>
+    <solid android:color="@color/primary_light"/>
+    <stroke android:width="1dp" android:color="@color/accent"/>
     <corners android:radius="10dp"/>
 
 </shape>
