--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:paddingStart="32dp"
     android:paddingEnd="32dp"
+    android:background="@color/primary_dark"
     tools:context=".presentation.register.RegisterFragment">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/email"
         app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/primary_color"
+        app:boxStrokeColor="@color/primary"
         app:boxStrokeWidth="1dp"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/primary_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -36,7 +38,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/password"
         app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/primary_color"
+        app:boxStrokeColor="@color/primary"
         app:boxStrokeWidth="1dp"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/primary_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -58,7 +61,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/first_name"
         app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/primary_color"
+        app:boxStrokeColor="@color/primary"
         app:boxStrokeWidth="1dp"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +72,8 @@
             android:id="@+id/firstName_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/primary_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- LastName TextInputLayout -->
@@ -79,7 +83,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/last_name"
         app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/primary_color"
+        app:boxStrokeColor="@color/primary"
         app:boxStrokeWidth="1dp"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +94,8 @@
             android:id="@+id/lastName_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/primary_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -99,7 +104,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/phone_number"
         app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/primary_color"
+        app:boxStrokeColor="@color/primary"
         app:boxStrokeWidth="1dp"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +116,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/primary_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -120,7 +126,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/birth_date"
         app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/primary_color"
+        app:boxStrokeColor="@color/primary"
         app:boxStrokeWidth="1dp"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +137,8 @@
             android:id="@+id/birthDate_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/primary_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -140,6 +147,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/register"
+        android:backgroundTint="@color/accent"
+        android:textColor="@color/primary_text"
         app:layout_constraintTop_toBottomOf="@id/birthDate_text_input_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
