--- a/app/src/main/res/layout/fragment_appointment_reserve.xml
+++ b/app/src/main/res/layout/fragment_appointment_reserve.xml
@@ -48,11 +48,11 @@
             android:layout_marginTop="16dp"
             app:cardElevation="8dp">
 
-            <CalendarView
+            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                 android:id="@+id/calendarView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" />
+                android:layout_height="wrap_content"/>
+
 
         </com.google.android.material.card.MaterialCardView>
 
