--- a/app/src/main/res/layout/fragment_menu_admin.xml
+++ b/app/src/main/res/layout/fragment_menu_admin.xml
@@ -23,7 +23,6 @@
                 android:layout_height="120dp"
                 android:background="@drawable/rounded_layout"
                 android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="@+id/contenedorBarraDeBusqueda"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -49,16 +48,6 @@
                             android:textColor="#FFFFFF"
                             android:textSize="18sp" />
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="15dp"
-                            android:layout_marginTop="5dp"
-                            android:text="TextView"
-                            android:textColor="#FFFFFF"
-                            android:textSize="20sp"
-                            android:textStyle="bold"
-                            tools:text="Busca tu doctor" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -103,17 +92,16 @@
                                     android:layout_gravity="center"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/home_buttons_layout"
-                                    android:padding="8dp"
                                     android:scaleType="fitCenter"
-                                    android:src="@drawable/ic_home_tooth"/>
+                                    android:src="@drawable/ic_home_tooth" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
+                                    android:text="Registrar Doctor"
+                                    android:textColor="#000000"
                                     android:layout_marginTop="5dp"
-                                    android:text="Reservar Cita"
-                                    android:textColor="@color/text_color"
                                     android:textSize="14sp"
                                     android:textStyle="bold" />
                             </LinearLayout>
@@ -131,19 +119,16 @@
                                     android:layout_gravity="center"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/home_buttons_layout"
-                                    android:padding="8dp"
                                     android:scaleType="fitCenter"
-                                    android:src="@drawable/ic_home_eye"
-                                    />
-                                <!-- android:contentDescription="@string/guide_button2" -->
+                                    android:src="@drawable/ic_home_eye"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
                                     android:layout_marginTop="5dp"
-                                    android:text="Mis Citas"
-                                    android:textColor="@color/text_color"
+                                    android:text="Administrar Doctores"
+                                    android:textColor="#000000"
                                     android:textSize="14sp"
                                     android:textStyle="bold" />
                             </LinearLayout>
@@ -172,9 +157,17 @@
                                     android:layout_gravity="center"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/home_buttons_layout"
-                                    android:padding="8dp"
                                     android:scaleType="fitCenter"
                                     android:src="@drawable/ic_home_heart" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:text="Administrar Citas"
+                                    android:textColor="#000000"
+                                    android:layout_marginTop="5dp"
+                                    android:textSize="14sp"
+                                    android:textStyle="bold" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -192,63 +185,11 @@
                             </LinearLayout>
 
                         </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:paddingLeft="20dp"
-                                android:text="Doctores Populares"
-                                android:textSize="18sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/verTodosDoctores"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="right"
-                                android:paddingRight="20dp"
-                                android:text="Ver todos >"
-                                android:textColor="#717070" />
-                        </LinearLayout>
-
                     </LinearLayout>
                 </ScrollView>
 
             </LinearLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/contenedorBarraDeBusqueda"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="92dp"
-                android:layout_marginRight="30dp"
-                app:layout_constraintBottom_toBottomOf="@+id/layout1"
-                app:layout_constraintEnd_toEndOf="@+id/layout1"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/layout1"
-                app:layout_constraintTop_toTopOf="@+id/layout1">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/btn_buscar_cita"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/search_layout"
-                    android:hint="Buscar..." />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
     </FrameLayout>
 
