--- a/app/src/main/res/layout/fragment_update_doctor.xml
+++ b/app/src/main/res/layout/fragment_update_doctor.xml
@@ -13,7 +13,7 @@
         app:civ_border_width="2dp"
         app:civ_border_color="@color/black"
         android:layout_gravity="center"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginBottom="20dp" />
 
 
 
@@ -26,7 +26,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="60dp" />
+        android:layout_marginBottom="40dp" />
 
     <EditText
         android:id="@+id/editNameDoctor"
@@ -156,6 +156,13 @@
         android:text="Habilitado"
         android:textSize="15sp"
         android:textColor="@color/checkbox_text_color"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="12dp" />
+
+    <Button
+        android:id="@+id/btn_actualizar_doctor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="Actualizar" />
 
 </LinearLayout>
