register and edit doctors

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -97,7 +97,7 @@
                                 android:orientation="vertical">
 
                                 <ImageButton
-                                    android:id="@+id/firstOptionHome"
+                                    android:id="@+id/registerDoctor"
                                     android:layout_width="48dp"
                                     android:layout_height="48dp"
                                     android:layout_gravity="center"
@@ -125,7 +125,7 @@
                                 android:orientation="vertical">
 
                                 <ImageButton
-                                    android:id="@+id/secondOptionHome"
+                                    android:id="@+id/listDoctors"
                                     android:layout_width="48dp"
                                     android:layout_height="48dp"
                                     android:layout_gravity="center"
