--- a/app/src/main/res/layout/fragment_menu_admin.xml
+++ b/app/src/main/res/layout/fragment_menu_admin.xml
@@ -86,7 +86,7 @@
                                 android:orientation="vertical">
 
                                 <ImageButton
-                                    android:id="@+id/firstOptionHome"
+                                    android:id="@+id/registerDoctor"
                                     android:layout_width="48dp"
                                     android:layout_height="48dp"
                                     android:layout_gravity="center"
@@ -113,7 +113,7 @@
                                 android:orientation="vertical">
 
                                 <ImageButton
-                                    android:id="@+id/secondOptionHome"
+                                    android:id="@+id/listDoctors"
                                     android:layout_width="48dp"
                                     android:layout_height="48dp"
                                     android:layout_gravity="center"
